--- a/packages/core/src/components/form-item/_form-item.scss
+++ b/packages/core/src/components/form-item/_form-item.scss
@@ -1,25 +1,29 @@
-.#{$ray-class-prefix}form-item {
-  margin-bottom: 1.5rem;
+@import '../../global/mixins/exports';
 
-  &__hint {
-    display: block;
-    color: $ray-color-text-medium;
-    font-weight: 400;
-    font-size: $ray-field-label-size-focus;
-    margin-top: 0.25rem;
-    margin-left: $ray-field-h-spacing;
-    line-height: 1;
-    width: 100%;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+@include exports('ray-form-item') {
+  .#{$ray-class-prefix}form-item {
+    margin-bottom: 1.5rem;
 
-    &--success {
-      color: $ray-color-green-70;
-    }
+    &__hint {
+      display: block;
+      color: $ray-color-text-medium;
+      font-weight: 400;
+      font-size: $ray-field-label-size-focus;
+      margin-top: 0.25rem;
+      margin-left: $ray-field-h-spacing;
+      line-height: 1;
+      width: 100%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
 
-    &--error {
-      color: $ray-color-red-50;
+      &--success {
+        color: $ray-color-green-70;
+      }
+
+      &--error {
+        color: $ray-color-red-50;
+      }
     }
   }
 }
