--- a/packages/core/src/global/_base.scss
+++ b/packages/core/src/global/_base.scss
@@ -1,51 +1,55 @@
-html {
-  font-size: 16px;
-}
+@import './mixins/exports';
 
-body {
-  font-family: $ray-font-stack-sans-serif;
-  color: $ray-color-text-dark;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  line-height: 1.6666666666666667;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-[disabled] {
-  cursor: not-allowed;
-}
-
-a {
-  text-decoration: none;
-  color: $ray-color-blue-50;
-
-  &:hover,
-  &:focus {
-    text-decoration: underline;
+@include exports('ray-base') {
+  html {
+    font-size: 16px;
   }
 
-  &.no-underline {
+  body {
+    font-family: $ray-font-stack-sans-serif;
+    color: $ray-color-text-dark;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    line-height: 1.6666666666666667;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  [disabled] {
+    cursor: not-allowed;
+  }
+
+  a {
+    text-decoration: none;
+    color: $ray-color-blue-50;
+
     &:hover,
     &:focus {
-      text-decoration: none !important;
+      text-decoration: underline;
+    }
+
+    &.no-underline {
+      &:hover,
+      &:focus {
+        text-decoration: none !important;
+      }
     }
   }
-}
 
-ul,
-li {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  ul,
+  li {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 }
