--- a/packages/core/src/global/material-grid/mdc-layout-grid.scss
+++ b/packages/core/src/global/material-grid/mdc-layout-grid.scss
@@ -20,121 +20,125 @@
 
 @import './variables';
 @import './mixins';
+@import '../mixins/exports';
 
-:root {
-  @each $size in map-keys($mdc-layout-grid-columns) {
-    --mdc-layout-grid-margin-#{$size}: #{map-get(
-        $mdc-layout-grid-default-margin,
-        $size
-      )};
-    --mdc-layout-grid-gutter-#{$size}: #{map-get(
-        $mdc-layout-grid-default-gutter,
-        $size
-      )};
-    --mdc-layout-grid-column-width-#{$size}: #{map-get(
-        $mdc-layout-grid-column-width,
-        $size
-      )};
-  }
-}
-
-// postcss-bem-linter: define layout-grid
-.#{$mdc-prefix}grid {
-  @each $size in map-keys($mdc-layout-grid-columns) {
-    @include mdc-layout-grid-media-query_($size) {
-      $margin: map-get($mdc-layout-grid-default-margin, $size);
-      $max-width: map-get($mdc-layout-grid-max-width, $size);
-
-      @include mdc-layout-grid($size, $margin, $max-width);
+@include exports('ray-grid') {
+  :root {
+    @each $size in map-keys($mdc-layout-grid-columns) {
+      --mdc-layout-grid-margin-#{$size}: #{map-get(
+          $mdc-layout-grid-default-margin,
+          $size
+        )};
+      --mdc-layout-grid-gutter-#{$size}: #{map-get(
+          $mdc-layout-grid-default-gutter,
+          $size
+        )};
+      --mdc-layout-grid-column-width-#{$size}: #{map-get(
+          $mdc-layout-grid-column-width,
+          $size
+        )};
     }
   }
-}
 
-.#{$mdc-prefix}grid__inner {
-  @each $size in map-keys($mdc-layout-grid-columns) {
-    @include mdc-layout-grid-media-query_($size) {
-      $margin: map-get($mdc-layout-grid-default-margin, $size);
-      $gutter: map-get($mdc-layout-grid-default-gutter, $size);
+  // postcss-bem-linter: define layout-grid
+  .#{$mdc-prefix}grid {
+    @each $size in map-keys($mdc-layout-grid-columns) {
+      @include mdc-layout-grid-media-query_($size) {
+        $margin: map-get($mdc-layout-grid-default-margin, $size);
+        $max-width: map-get($mdc-layout-grid-max-width, $size);
 
-      @include mdc-layout-grid-inner($size, $margin, $gutter);
-    }
-  }
-}
-
-.#{$mdc-prefix}grid__cell {
-  // select the upper breakpoint
-  $upper-breakpoint: nth(map-keys($mdc-layout-grid-columns), 1);
-
-  @each $size in map-keys($mdc-layout-grid-columns) {
-    @include mdc-layout-grid-media-query_($size) {
-      $gutter: map-get($mdc-layout-grid-default-gutter, $size);
-
-      @include mdc-layout-grid-cell(
-        $size,
-        $mdc-layout-grid-default-column-span,
-        $gutter
-      );
-
-      @for $span
-        from 1
-        through map-get($mdc-layout-grid-columns, $upper-breakpoint)
-      {
-        // Span classes.
-        // stylelint-disable max-nesting-depth
-        @at-root .#{$mdc-prefix}grid__cell--span-#{$span},
-          .#{$mdc-prefix}grid__cell--span-#{$span}-#{$size} {
-          @include mdc-layout-grid-cell-span_($size, $span, $gutter);
-        }
-        // stylelint-enable max-nesting-depth
+        @include mdc-layout-grid($size, $margin, $max-width);
       }
     }
   }
 
-  // Order override classes.
-  @for $i from 1 through map-get($mdc-layout-grid-columns, $upper-breakpoint) {
-    &--order-#{$i} {
-      @include mdc-layout-grid-cell-order($i);
+  .#{$mdc-prefix}grid__inner {
+    @each $size in map-keys($mdc-layout-grid-columns) {
+      @include mdc-layout-grid-media-query_($size) {
+        $margin: map-get($mdc-layout-grid-default-margin, $size);
+        $gutter: map-get($mdc-layout-grid-default-gutter, $size);
+
+        @include mdc-layout-grid-inner($size, $margin, $gutter);
+      }
     }
   }
 
-  // Alignment classes.
-  &--align-top {
-    @include mdc-layout-grid-cell-align(top);
-  }
+  .#{$mdc-prefix}grid__cell {
+    // select the upper breakpoint
+    $upper-breakpoint: nth(map-keys($mdc-layout-grid-columns), 1);
 
-  &--align-middle {
-    @include mdc-layout-grid-cell-align(middle);
-  }
+    @each $size in map-keys($mdc-layout-grid-columns) {
+      @include mdc-layout-grid-media-query_($size) {
+        $gutter: map-get($mdc-layout-grid-default-gutter, $size);
 
-  &--align-bottom {
-    @include mdc-layout-grid-cell-align(bottom);
-  }
-}
+        @include mdc-layout-grid-cell(
+          $size,
+          $mdc-layout-grid-default-column-span,
+          $gutter
+        );
 
-.#{$mdc-prefix}grid--fixed-column-width {
-  @each $size in map-keys($mdc-layout-grid-columns) {
-    @include mdc-layout-grid-media-query_($size) {
-      $margin: map-get($mdc-layout-grid-default-margin, $size);
-      $gutter: map-get($mdc-layout-grid-default-gutter, $size);
-      $column-width: map-get($mdc-layout-grid-column-width, $size);
+        @for $span
+          from 1
+          through map-get($mdc-layout-grid-columns, $upper-breakpoint)
+        {
+          // Span classes.
+          // stylelint-disable max-nesting-depth
+          @at-root .#{$mdc-prefix}grid__cell--span-#{$span},
+            .#{$mdc-prefix}grid__cell--span-#{$span}-#{$size} {
+            @include mdc-layout-grid-cell-span_($size, $span, $gutter);
+          }
+          // stylelint-enable max-nesting-depth
+        }
+      }
+    }
 
-      @include mdc-layout-grid-fixed-column-width(
-        $size,
-        $margin,
-        $gutter,
-        $column-width
-      );
+    // Order override classes.
+    @for $i from 1 through map-get($mdc-layout-grid-columns, $upper-breakpoint)
+    {
+      &--order-#{$i} {
+        @include mdc-layout-grid-cell-order($i);
+      }
+    }
+
+    // Alignment classes.
+    &--align-top {
+      @include mdc-layout-grid-cell-align(top);
+    }
+
+    &--align-middle {
+      @include mdc-layout-grid-cell-align(middle);
+    }
+
+    &--align-bottom {
+      @include mdc-layout-grid-cell-align(bottom);
     }
   }
-}
 
-.#{$mdc-prefix}grid--align-left {
-  margin-right: auto;
-  margin-left: 0;
-}
+  .#{$mdc-prefix}grid--fixed-column-width {
+    @each $size in map-keys($mdc-layout-grid-columns) {
+      @include mdc-layout-grid-media-query_($size) {
+        $margin: map-get($mdc-layout-grid-default-margin, $size);
+        $gutter: map-get($mdc-layout-grid-default-gutter, $size);
+        $column-width: map-get($mdc-layout-grid-column-width, $size);
 
-.#{$mdc-prefix}grid--align-right {
-  margin-right: 0;
-  margin-left: auto;
+        @include mdc-layout-grid-fixed-column-width(
+          $size,
+          $margin,
+          $gutter,
+          $column-width
+        );
+      }
+    }
+  }
+
+  .#{$mdc-prefix}grid--align-left {
+    margin-right: auto;
+    margin-left: 0;
+  }
+
+  .#{$mdc-prefix}grid--align-right {
+    margin-right: 0;
+    margin-left: auto;
+  }
+  // postcss-bem-linter: end
 }
-// postcss-bem-linter: end
